force-app/main/default/objects/Days_Off__c/Days_Off__c.object-meta.xml
<CustomObject>
    <label>Days Off</label>
    <nameField>
        <label>Days Off Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Days Off</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>