force-app/main/default/objects/Days_Off__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved By Squad Lead</label>
    <type>Checkbox</type>
</CustomField>