force-app/main/default/objects/Days_Off__c/fields/Approved_By_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Project_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved By Project Manager</label>
    <type>Checkbox</type>
</CustomField>