force-app/main/default/objects/Days_Off__c/fields/Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto_Approved</label>
    <type>Checkbox</type>
</CustomField>