force-app/main/default/objects/Days_Off__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Days Off</relationshipLabel>
    <relationshipName>Days_Off</relationshipName>
    <type>Lookup</type>
</CustomField>