force-app/main/default/objects/Days_Off__c/fields/Validation_Dates__c.field-meta.xml
<CustomField>
    <fullName>Validation_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Dates</label>
    <type>Checkbox</type>
</CustomField>