force-app/main/default/objects/Days_Off__c/validationRules/VR_Days_Off_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Days_Off_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>Validation_Dates__c</errorConditionFormula>
    <errorMessage>Start Date and Close Date must be after today.</errorMessage>
</ValidationRule>