force-app/main/default/objects/Days_Off__c/listViews/My_Days_Off.listView-meta.xml
<ListView>
    <fullName>My_Days_Off</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Project__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Days Off</label>
</ListView>